<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollViewHisttoryLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin_8dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtchoose_day_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/text_press"
                android:text="@string/text_see_ofday"
                android:textColor="@color/breakfast"
                android:textSize="@dimen/text_primary"
                />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/layout_margin_8dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_breakfast"
                    android:textColor="@color/breakfast"
                    android:textSize="@dimen/text_primary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtThemBuaSang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_margin_8dp"
                    android:layout_marginTop="0dp"
                    android:clickable="true"
                    android:text="@string/text_add_food"
                    android:background="@drawable/text_press"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_4dp"
                android:layout_marginTop="@dimen/layout_margin_4dp"
                android:scrollbars="horizontal"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/layout_margin_8dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/text_lunch"
                    android:textColor="@color/breakfast"
                    android:textSize="@dimen/text_primary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtThemBuaTrua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_margin_8dp"
                    android:layout_marginTop="0dp"
                    android:clickable="true"
                    android:text="@string/text_add_food"
                    android:background="@drawable/text_press"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_history_lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_4dp"
                android:layout_marginTop="@dimen/layout_margin_4dp"
                android:scrollbars="horizontal"
                />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/layout_margin_8dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/text_dinner"
                    android:textColor="@color/breakfast"
                    android:textSize="@dimen/text_primary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtThemBuaToi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_margin_8dp"
                    android:layout_marginTop="0dp"
                    android:clickable="true"
                    android:text="@string/text_add_food"
                    android:background="@drawable/text_press"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_history_dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_4dp"
                android:layout_marginTop="@dimen/layout_margin_4dp"
                android:scrollbars="horizontal"
                />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/layout_margin_8dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/text_snack"
                    android:textColor="@color/breakfast"
                    android:textSize="@dimen/text_primary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtThemBuaphu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_margin_8dp"
                    android:layout_marginTop="0dp"
                    android:clickable="true"
                    android:text="@string/text_add_food"
                    android:background="@drawable/text_press"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_history_snack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_4dp"
                android:layout_marginTop="@dimen/layout_margin_4dp"
                android:scrollbars="horizontal"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab_addfood_history"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_marginBottom="4dp"-->
        <!--android:layout_marginRight="4dp"-->
        <!--app:fabSize="mini"-->
        <!--android:src="@drawable/ic_add_black"-->
        <!--/>-->
</FrameLayout>